Fixing bug 222954. Be consistent about checking that EnsureFocusContrller() really got a focus controller. Fixes crash when the options dialog is opened while one is already open. r=ben@bengoodger.com, sr=brendan@mozilla.org, a=asa@mozilla.org